<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.stripe.android.view.CardNumberEditText
        android:id="@+id/etCard"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingHorizontal="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/card_number"
        android:inputType="number"
        android:textColorHint="@color/grey"
        android:background="@drawable/border_edit_text"
        />
    <EditText android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingHorizontal="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/card_holder"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        android:background="@drawable/border_edit_text"
        />
     <com.stripe.android.view.ExpiryDateEditText
         android:id="@+id/et_expiry"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingHorizontal="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/expire"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        android:background="@drawable/border_edit_text"
        />
     <com.stripe.android.view.CvcEditText
         android:id="@+id/et_cvv"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingHorizontal="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/expire"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        android:background="@drawable/border_edit_text"
        />

    <com.google.android.material.button.MaterialButton
        android:text="@string/pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/payButton"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="16dp"
        android:backgroundTint="?colorPrimary"/>




</LinearLayout>