<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView android:id="@+id/tvCardOnly"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/card_only_payment"
        android:gravity="center"
        android:textColor="#C8000000"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        />

    <TextView android:id="@+id/tvPreBuilt"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/prebuilt_ui"
        android:gravity="center"
        android:textColor="#C8000000"
        app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        android:textAllCaps="true"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        />

    <TextView android:id="@+id/tvCustomCard"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
        android:text="@string/custom_card"
        android:gravity="center"
        android:textColor="#C8000000"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        android:textAllCaps="true"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        />

</LinearLayout>